--- a/sources/front-end/static/themes/nord/theme.css
+++ b/sources/front-end/static/themes/nord/theme.css
@@ -1,37 +1,37 @@
 :root {
   /* nord0 in palette */
-	--theme-black: #2E3440;
+	--theme-black: hsl(220, 16%, 22%);
   /* nord1 in palette */
-	--theme-dark_gray: #3B4252;
+	--theme-dark_gray: hsl(222, 16%, 28%);
   /* nord2 in palette */
-	--theme-gray: #434C5E;
+	--theme-gray: hsl(220, 17%, 32%);
   /* nord3 in palette */
-	--theme-light_gray: #4C566A;
+	--theme-light_gray: hsl(220, 16%, 36%);
   /* out of palette */
-	--theme-light_gray_bright: #616E88;
+	--theme-light_gray_bright: hsl(220, 17%, 46%);
   /* nord4 in palette */
-	--theme-darkest_white: #D8DEE9;
+	--theme-darkest_white: hsl(219, 28%, 88%);
   /* nord5 in palette */
-	--theme-darker_white: #E5E9F0;
+	--theme-darker_white: hsl(218, 27%, 92%);
   /* nord6 in palette */
-	--theme-white: #ECEFF4; 
+	--theme-white: hsl(218, 27%, 94%); 
   /* nord7 in palette */
-	--theme-teal: #8FBCBB; 
+	--theme-teal: hsl(179, 25%, 65%); 
   /* nord8 in palette */
-	--theme-off_blue: #88C0D0;
+	--theme-off_blue: hsl(193, 43%, 67%);
   /* nord9 in palette */
-	--theme-glacier: #81A1C1;
+	--theme-glacier: hsl(210, 34%, 63%);
   /* nord10 in palette */
-	--theme-blue: #5E81AC;
+	--theme-blue: hsl(213, 32%, 52%);
   /* nord11 in palette */
-	--theme-red: #BF616A;
+	--theme-red: hsl(354, 42%, 56%);
   /* nord12 in palette */
-	--theme-orange: #D08770;
+	--theme-orange: hsl(14, 51%, 63%);
   /* nord13 in palette */
-	--theme-yellow: #EBCB8B;
+	--theme-yellow: hsl(40, 71%, 73%);
   /* nord14 in palette */
-	--theme-green: #A3BE8C;
+	--theme-green: hsl(92, 28%, 65%);
   /* nord15 in palette */
-	--theme-purple: #B48EAD;
+	--theme-purple: hsl(311, 20%, 63%);
 	--theme-none: transparent;
 }
